# toy-wm

./: OPTIMIZATION_LOG.md  README.md  plan.txt  play.py  pyproject.toml  tt-toy-wm-4x.mov  ttlang_sample.py
ttlang/: compare.py  compare_debug.py  compare_multiframe.py  compare_single.py  compare_v1_v2.py  forward.py  inspect_rope.py  inspect_weights.py  play.py  profile_mod_broadcast.py  sample.py  sample_v1.py  sample_v2.py  weights.py
ttlang/kernels/: adaln.py  elementwise.py  embedding.py  linear.py  mod_broadcast.py  rmsnorm.py  rope.py  sampling.py  test_block.py  test_geglu.py  test_patch.py  test_sdpa.py  test_sdpa_mask.py  test_sdpa_scale.py
