[project]
name = "toy-wm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "diffusers>=0.35.2",
    "einops>=0.8.1",
    "eventlet>=0.40.3",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-socketio>=5.5.1",
    "huggingface-hub>=1.0.1",
    "ipykernel>=7.1.0",
    "jaxtyping>=0.3.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "muon-optimizer",
    "numpy>=2.3.4",
    "omegaconf>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "pip>=25.3",
    "pyyaml>=6.0.3",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "wandb[media]>=0.22.3",
]

[tool.uv.sources]
muon-optimizer = { git = "https://github.com/KellerJordan/Muon" }
